--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   appwrite: ^9.0.0
   flutter_svg: ^2.0.5
+  flutter_riverpod: ^2.3.4
   
 
 dev_dependencies:
