--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  appwrite: ^9.0.0
+  appwrite: ^8.2.0
   flutter_svg: ^2.0.5
   flutter_riverpod: ^2.3.4
+  fpdart: ^0.5.0
   
 
 dev_dependencies:
